--- a/Circuit Mod Manager/Circuit Mod Manager.csproj
+++ b/Circuit Mod Manager/Circuit Mod Manager.csproj
@@ -83,6 +83,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Ionic.Zip.Reduced">
+      <HintPath>..\..\..\..\..\Desktop\Ionic.Zip.Reduced.dll</HintPath>
+    </Reference>
     <Reference Include="NUnrar">
       <HintPath>..\..\..\..\..\Desktop\NUnrar.dll</HintPath>
     </Reference>
