--- a/Circuit Mod Manager/App.config
+++ b/Circuit Mod Manager/App.config
@@ -35,6 +35,18 @@
       <setting name="customDatabasesExist" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="usingPersonalFolder" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="alwaysDeleteFileAfterInstall" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="mxExeLocation" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="lockFps" serializeAs="String">
+        <value />
+      </setting>
     </Circuit_Mod_Manager.Properties.Settings>
   </userSettings>
 </configuration>
