--- a/Circuit Mod Manager/Circuit Mod Manager.csproj
+++ b/Circuit Mod Manager/Circuit Mod Manager.csproj
@@ -138,12 +138,21 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="iTalk Theme.cs" />
+    <Compile Include="newDatabaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="newDatabaseForm.Designer.cs">
+      <DependentUpon>newDatabaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartupRoutine.cs" />
     <Compile Include="VariableManager.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="newDatabaseForm.resx">
+      <DependentUpon>newDatabaseForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -172,6 +181,14 @@
   <ItemGroup>
     <Content Include="dirtbikeIcon.ico" />
     <Content Include="mxsim_mod_manager.ico" />
+    <None Include="Resources\folder_open.png" />
+    <None Include="Resources\waitScreen.png" />
+    <None Include="Resources\loadingImage1.png" />
+    <None Include="Resources\loadingImage.png" />
+    <None Include="Resources\refresh_hover.png" />
+    <None Include="Resources\refresh_clicked1.png" />
+    <None Include="Resources\refresh_clicked.png" />
+    <None Include="Resources\refresh.png" />
     <None Include="Resources\dots-horizontal.png" />
     <None Include="Resources\ic_play_arrow_black_36dp_1x.png" />
     <None Include="Resources\play.png" />
