--- a/Circuit Mod Manager/Properties/Settings.settings
+++ b/Circuit Mod Manager/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="lockFps" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="mxSimDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
