--- a/Circuit Mod Manager/App.config
+++ b/Circuit Mod Manager/App.config
@@ -52,6 +52,9 @@
       <setting name="mxSimDir" serializeAs="String">
         <value />
       </setting>
+      <setting name="hideDefaultDatabases" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Circuit_Mod_Manager.Properties.Settings>
   </userSettings>
 </configuration>
