--- a/Circuit Mod Manager/Circuit Mod Manager.csproj
+++ b/Circuit Mod Manager/Circuit Mod Manager.csproj
@@ -150,6 +150,12 @@
     <Compile Include="newDatabaseForm.Designer.cs">
       <DependentUpon>newDatabaseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PasswordManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PasswordManager.Designer.cs">
+      <DependentUpon>PasswordManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -164,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="newDatabaseForm.resx">
       <DependentUpon>newDatabaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordManager.resx">
+      <DependentUpon>PasswordManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -190,6 +199,7 @@
     <Content Include="dirtbikeIcon.ico" />
     <Content Include="mxsim_mod_manager.ico" />
     <Content Include="mxsim_mod_manager_gray_icon.ico" />
+    <None Include="Resources\delete_sweep.png" />
     <None Include="Resources\mxsim_mod_manager_gray_icon.ico" />
     <None Include="Resources\folder_open.png" />
     <None Include="Resources\waitScreen.png" />
