--- a/Circuit Mod Manager/Properties/Settings.settings
+++ b/Circuit Mod Manager/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="mxSimDir" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="hideDefaultDatabases" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
